--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,11 @@
+@import "App.css";
+@import "TopNavBar.css";
+@import "Main.css";
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
-@import "App.css";
+
