--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,16 @@
+
 .App {
-  text-align: center;
+    text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App-title {
+    font-size: 1.5em;
 }
+
+.App-intro {
+    font-size: large;
+}
+
 
 
 
