--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,8 +1,13 @@
 .main {
+    margin-top: 70px;
+}
+
+.player {
     display: flex;
     width: 750px;
-    border: 3px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 5px 10px 10px #888;
     margin: auto;
+    border: 3px solid #ccc;
+    box-shadow: 5px 10px 10px #888;
+    border-radius: 10px;
+    overflow: hidden;
 }
